--- a/IT_Skills/CSS/division cover page.css
+++ b/IT_Skills/CSS/division cover page.css
@@ -1,4 +1,12 @@
-*,:after,:before {box-sizing: border-box}
+    *,:after,:before {box-sizing: border-box}
+.div-main {max-width: 1000px;margin: auto;}
+.div-row:after {content: "";display: table;clear: both;}
+.div-row,.div-row > .column {padding: 8px;}
+.div-row > .column {width: 33.33%;display: none;}
+.div-row > .show_entry {display: block;}
+.category_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
+.category_butn:hover {background-color: #ddd;}
+.category_butn.active {background-color: #666;color: white;}
 .div-row {display: flex;flex-wrap: nowrap;margin-right: -15px;margin-left: -15px;padding: 10px;}
 .col,.col-1,.col-10,.col-11,.col-12,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-auto,.col-lg,.col-lg-1,.col-lg-10,.col-lg-11,
 .col-lg-12,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-auto,.col-md,.col-md-1,.col-md-10,.col-md-11,
@@ -6,8 +14,7 @@
 .col-sm-12,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-auto,.col-xl,.col-xl-1,.col-xl-10,.col-xl-11,
 .col-xl-12,.col-xl-2,.col-xl-3,.col-xl-4,.col-xl-5,.col-xl-6,.col-xl-7,.col-xl-8,.col-xl-9,.col-xl-auto {padding-right: 5px;padding-left: 5px;}
 @media(min-width: 1200px).col-xl-3 {-webkit-box-flex:0;-ms-flex:0025%;flex:0025%;max-width:25%;}
-.new_entry_card {background: #fff;width: 100%;height: 352px;margin: 20px;border-radius: 10px;border: solid 2px blue;transition: auto;
-position: relative;padding: 0px;display: block;}
+.new_entry_card {background: #fff;width: 100%;height: 352px;margin: 20px;border-radius: 10px;border: solid 2px blue;transition: auto;position: relative;padding: 0px;background-size: contain;}
 a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;bottom: 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2) 
 inset;left: 0;position: absolute;right: 0;top: 0;transition: background 0.1s linear 0s;}
 .go-entry {justify-content: center;display: flex;border: 0;width: 70px;align-items: center;height: 70px;text-align: center;border-radius: 100%;
@@ -17,6 +24,6 @@ font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: tr
 .fa,.fab,.fad,.fal,.far,.fas {-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;display: inline-block;font-style: normal;
 font-variant: normal;text-rendering: auto;line-height: 1;}
 .entry_title {text-align: center;background-color: maroon;border-radius: 1px;overflow: hidden;padding: 8px;position: absolute;z-index: 300;bottom: 2;
-width: 100%;margin: 2px;display: flex;height: 75px;justify-content: center;align-items: center;flex-direction: column;}
+width: 100%;margin: 0;display: flex;height: 75px;justify-content: center;align-items: center;flex-direction: column;}
 .entry20ss {font-size: 17px;line-height: 25px;color: #fff;}
 }
