--- a/IT_Skills/CSS/Div_Cvr_Page.css
+++ b/IT_Skills/CSS/Div_Cvr_Page.css
@@ -17,7 +17,7 @@
 .new_entry_card {background: #fff;width: 100%;height: 352px;margin: 20px;border-radius: 10px;border: solid 2px blue;transition: auto;position: relative;padding: 0px;background-size: contain;}
 a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;bottom: 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2) 
 inset;left: 0;position: absolute;right: 0;top: 0;transition: background 0.1s linear 0s;}
-.go-entry {justify-content: center;display: flex;border: 0;width: 70px;align-items: center;height: 70px;text-align: center;border-radius: 100%;
+.go-entry {justify-content: center;display: flex!important;border: 0;width: 70px;align-items: center;height: 70px;text-align: center;border-radius: 100%;
 font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: translateX(50%)translateY(-50%);opacity: 1;background: blue;}
 .fa,.fas {font-weight: 900;font:normal normal normal 14px/1 FontAwesome;}
 .fa-2x {font-size: 2em;}
