--- a/IT_Skills/CSS/Div_Cvr_Page.css
+++ b/IT_Skills/CSS/Div_Cvr_Page.css
@@ -6,7 +6,7 @@
 .div-row > .show_entry {display: block;}
 .category_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
 .category_butn:hover {background-color: #ddd;}
-.category_butn.active-entry {background-color: #666;color: white;}
+.category_butn >.active-entry {background-color: #666;color: white;}
 .div-row {display: flex;flex-wrap: nowrap;margin-right: -15px;margin-left: -15px;padding: 10px;}
 .col,.col-1,.col-10,.col-11,.col-12,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-auto,.col-lg,.col-lg-1,.col-lg-10,.col-lg-11,
 .col-lg-12,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-auto,.col-md,.col-md-1,.col-md-10,.col-md-11,
