--- a/IT_Skills/CSS/Div_Cvr_Page.css
+++ b/IT_Skills/CSS/Div_Cvr_Page.css
@@ -23,7 +23,6 @@ font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: tr
 .fa-2x {font-size: 2em;}
 .fa,.fab,.fad,.fal,.far,.fas {-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;display: inline-block;font-style: normal;
 font-variant: normal;text-rendering: auto;line-height: 1;}
-.entry_title {text-align: center;background-color: maroon;border-radius: 1px;overflow: hidden;padding: 8px;position: absolute;z-index: 300;bottom: 2px;
+.entry_title {text-align: center;background-color: maroon;border-radius: 1px;overflow: hidden;padding: 8px;position: absolute;z-index: 300;bottom: 0;
 width: 100%;margin: 0;display: flex;height: 75px;justify-content: center;align-items: center;flex-direction: column;}
 .entry20ss {font-size: 17px;line-height: 25px;color: #fff;}
-}
