--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -2,6 +2,7 @@
 .div-main {max-width: 1000px;margin: auto;}
 .div-row:after {content: "";display: table;clear: both;}
 .div-row,.div-row > .column {padding: 8px;}
+#entries_filter{background-color: #666;}
 .div-row > .column {width: 33.33%;display: none;}
 .div-row > .show_entry {display: block;}
 .category_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
