--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -7,7 +7,7 @@
 .div-row > .show_entry {display: block;}
 .category_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
 .category_butn:hover {background-color: #ddd;}
-.entry-grp{background-color: #ddd;width:40px;height:20px;color:red;index: 400;}
+a.entry-grp{background-color: #ddd;width:40px;height:20px;color:red;index: 400;}
 .active-entry {background-color: #666;color: white;}
 .div-row {display: flex;flex-wrap: nowrap;margin-right: -15px;margin-left: -15px;padding: 10px;}
 .col,.col-1,.col-10,.col-11,.col-12,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-auto,.col-lg,.col-lg-1,.col-lg-10,.col-lg-11,
