--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -17,7 +17,7 @@ a.entry-grp{background-color: #ddd;width:40px;height:20px;color:red;index: 400;}
 .col-xl-12,.col-xl-2,.col-xl-3,.col-xl-4,.col-xl-5,.col-xl-6,.col-xl-7,.col-xl-8,.col-xl-9,.col-xl-auto {padding-right: 5px;padding-left: 5px;}
 @media(min-width: 1200px).col-xl-3 {-webkit-box-flex:0;-ms-flex:0025%;flex:0025%;max-width:25%;}
 .new_entry_card {background: #fff;width: 100%;height: 352px;margin: 20px;border-radius: 10px;border: solid 2px blue;transition: auto;position: relative;padding: 0px;background-size: contain;}
-a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2) 
+a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2;top: 0;left: 0;right: 0;bottom: 70px;) 
 inset;position: absolute;transition: background 0.1s linear 0s;}
 .entry-cover-thumb{max-width: 100%;position: absolute;object-fit: cover;object-position: center center;width: 100%;height: 100%!important;}
 div div a .entry-categ_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
