--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -19,7 +19,7 @@ a.entry-grp{background-color: #ddd;width:40px;height:20px;color:red;index: 400;}
 .new_entry_card {background: #fff;width: 100%;height: 352px;margin: 20px;border-radius: 10px;border: solid 2px blue;transition: auto;position: relative;padding: 0px;background-size: contain;}
 a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2;top: 0;left: 0;right: 0;bottom: 70px;) 
 inset;position: absolute;transition: background 0.1s linear 0s;}
-.entry-cover-thumb{object-fit: cover;object-position: center;width: 100%;height: 100%!important;}
+.entry-cover-thumb{object-fit: cover;object-position: center;width: 100%!important;height: 100%!important;}
 div div a .entry-categ_butn {border: none;outline: none;padding: 12px 16px;background-color: white;cursor: pointer;}
 .go-entry {justify-content: center;display: flex!important;border: 0;width: 70px;align-items: center;height: 70px;text-align: center;border-radius: 100%;
 font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: translateX(50%)translateY(-50%);opacity: 1;background: blue;}
