--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -20,7 +20,7 @@ a.entry-grp{background-color: #ddd;width:40px;height:20px;color:red;index: 400;}
 a.entry-cover {background: none repeat scroll 0 0 rgba(0,0,0,0.2);border-radius: 4px 4px 0 0;box-shadow: 3px 0 0 rgba(0,0,0,0.2;top: 0;left: 0;right: 0;bottom: 70px;) 
 inset;transition: background 0.1s linear 0s;color: #fff!important;font-weight: bold!important;}
 .entry-cover-thumb{object-fit: cover;object-position: center;min-width: 100%!important;min-height: 100%!important;margin:0!important;padding:0!important;border:none!important;}
-span.entry-categ-info {padding: 12px 16px;position: absolute;top:10px;right: 65%;font-size: 12px;background-color: #fff;}
+span.entry-categ-info {padding: 10px;position: absolute;top: 0px;right: 55%;font-size: 12px;background-color: lightgoldenrodyellow;border: solid 2px red;}
 div div div span a {border: none;outline: none;color: maroon!important;cursor: pointer;font-weight: bold!important;}
 .go-entry {justify-content: center;display: flex!important;border: 0;width: 70px;align-items: center;height: 70px;text-align: center;border-radius: 100%;
 font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: translateX(50%)translateY(-50%);opacity: 1;background: blue;}
