--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -1,5 +1,6 @@
     *,:after,:before {box-sizing: border-box}
-.div-main {max-width: 1000px;margin: auto;}
+.div-main {max-width: 1000px;margin: auto;font-family: Noto Naskh Arabic UI, 'Google Sans Text', Roboto, 'Helvetica Neue', Helvetica, sans-serif!important;
+   line-height: 1.5;!important}
 .div-row:after {content: "";display: table;clear: both;}
 .div-row,.div-row > .column {padding: 8px;}
 #entries_filter{background-color: palegoldenrod;border: solid 4px #666;}
