--- a/IT_Skills/css/Div_Cvr_Page.css
+++ b/IT_Skills/css/Div_Cvr_Page.css
@@ -30,5 +30,5 @@ font-size: 20px;color: #fff;position: absolute;top: 50%;right: 50%;transform: tr
 .fa,.fab,.fad,.fal,.far,.fas {-moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;display: inline-block;font-style: normal;
 font-variant: normal;text-rendering: auto;line-height: 1;}
 .entry_title {text-align: center;background-color: maroon;border-radius: 1px;overflow: hidden;padding: 8px;position: absolute;z-index: 300;bottom: 0;
-width: 100%;margin: 0;display: block;height: 75px;text-decoration: none!important;}
+width: 100%;margin: 0;display: block;height: 75px;text-decoration: none!important;left:0;}
 h4.entry_title a {font-size: 17px!important;line-height: 25px;color: #fff!important;}
