--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -15,7 +15,7 @@ h1, h2, h4 {text-transform: capitalize;word-break: break-all;}
 .row:after {content: "";display: table;clear: both;}
 .content {background-color: white;padding: 10px;max-width:90%;}
 .entry-item {height:300px;}
-.entry-kind {position: relative;top: 40px;left: 22px;color: #e8e83c;background-color: #0f16ae;padding: 10px;}
+.entry-kind {position: relative;top: 56px;left: -22px;color: #e8e83c;background-color: #0f16ae;padding: 7px;font-size: 14px;}
 .show {display: block;}
 .btn {border: none;outline: none;padding: 12px 16px;color: #e8e83c;background-color: #0f16ae;cursor: pointer;margin: 2px 3px;}
 .btn:hover {background-color: #210404;} 
