--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -11,10 +11,10 @@ h1, h2, h4 {text-transform: capitalize;word-break: break-all;}
 .content h4 {text-align: center;padding: 8px;}
 .row {margin: 0;}
 .row,.row > .column {padding: 8px;}
-.column {float: left;width:32.5%;display: none;height: 450px; }
+.column {float: left;width:32.5%;display: none;height: 390px; }
 .row:after {content: "";display: table;clear: both;}
 .content {background-color: white;padding: 10px;height: 100%;}
-.entry-item {height:300px;}
+.entry-item {height:80%;}
 .entry-kind {position: relative;top: 56px;left: -22px;color: #e8e83c;background-color: #0f16ae;padding: 7px;font-size: 14px;}
 .show {display: block;}
 .btn {border: none;outline: none;padding: 12px 16px;color: #e8e83c;background-color: #0f16ae;cursor: pointer;margin: 2px 3px;}
