--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -7,7 +7,7 @@ body {background-color: #408595;padding: 20px;font-family: Arial;}
 h2 {font-size: 40px;}
 h4 {margin: auto;}
 .post-body h4 {font-weight: 700;font-size: 16px;text-decoration: none;background-color: black;height: 20%;color: gold;}
-h1, h2, h4 {text-transform: capitalize;word-break: break-all;}
+h1, h2, h4 {text-transform: capitalize;}
 .content h4 {text-align: center;padding: 8px;}
 .row {margin: 0;}
 .row,.row > .column {padding: 8px;}
