--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -6,9 +6,9 @@ body {background-color: #408595;padding: 20px;font-family: Arial;}
 .topnav a:hover { background-color: #ddd; color: black; } .topnav a.active { background-color: #04AA6D; color: white; }
 h2 {font-size: 40px;}
 h4 {margin: auto;}
-.post-body h4 {font-weight: 700;font-size: 16px;text-decoration: none;background-color: black;height: 20%;color: gold;display:flex;align-items: center;justify-content: center;}
+.post-body h4 {font-size: 16px;text-decoration: none;}
 h1, h2, h4 {text-transform: capitalize;}
-.content h4 {text-align: center;padding: 8px;}
+article .main .row .column  h4{font-size: 14px;text-decoration: none;text-align: center;padding: 8px;background-color: black;height: 20%;color: gold;display:flex;align-items: center;justify-content: center;}
 .row {margin: 0;}
 .row,.row > .column {padding: 8px;}
 .column {float: left;width:32.5%;display: none;height: 390px; }
