--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -8,13 +8,13 @@ h2 {font-size: 40px;}
 h4 {margin: auto;}
 .post-body h4 {font-size: 16px;text-decoration: none;}
 h1, h2, h4 {text-transform: capitalize;}
-article .main .row .column  h4{font-size: 14px;text-decoration: none;text-align: center;padding: 8px;background-color: black;height: 20%;color: gold;display:flex;align-items: center;justify-content: center;}
+article .main .row .column  h4{font-size: 14px;text-decoration: none;text-align: center;padding: 8px;background-color: black;height: 25%;color: gold;display:flex;align-items: center;justify-content: center;}
 .row {margin: 0;}
-.row,.row > .column {padding: 8px;}
+.row,.row > .column {padding: 20px;}
 .column {float: left;width:32.5%;display: none;height: 390px; }
 .row:after {content: "";display: table;clear: both;}
-.content {background-color: white;padding: 10px;height: 100%;}
-.entry-item {height:80%;}
+.content {background-color: white;height: 100%;}
+.entry-item {height:75%;}
 .entry-kind {position: relative;top: 56px;left: -22px;color: #e8e83c;background-color: #0f16ae;padding: 7px;font-size: 14px;}
 .show {display: block;}
 .btn {border: none;outline: none;padding: 12px 16px;color: #e8e83c;background-color: #0f16ae;cursor: pointer;margin: 2px 3px;}
