--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -19,7 +19,7 @@ article .main .row .column  h4{font-size: 14px;text-decoration: none;text-align:
 .show {display: block;}
 .btn {border: none;outline: none;padding: 12px 16px;color: #e8e83c;background-color: #0f16ae;cursor: pointer;margin: 2px 3px;}
 .btn:hover {background-color: #210404;} 
-.btn.active {font-weight: 600;background-color: #9ae53e;color: #791d1d;}
+.btn:active {font-weight: 600;background-color: #9ae53e;color: #791d1d;}
 @media screen and (max-width: 800px) {.column {-ms-flex: 50%;flex: 50%;max-width: 50%;}}
 @media screen and (max-width: 600px) {.column {-ms-flex: 100%;flex: 100%;max-width: 100%;}}
 @media screen and (max-width: 600px) {.topnav a:not(:first-child) {display: none;}.topnav a.icon {float: right;display: block;}}
