--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -3,7 +3,8 @@ body {background-color: #408595;padding: 20px;font-family: Arial;}
 .main {max-width: 1200px;margin: auto;}
 .topnav { overflow: hidden; background-color: #333; } 
 .topnav a { float: left; display: block; color: #f2f2f2; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px; } 
-.topnav a:hover { background-color: #ddd; color: black; } .topnav a.active { background-color: #04AA6D; color: white; }
+.topnav a.active { background-color: #04AA6D; color: white; }
+.topnav a:hover { background-color: #ddd; color: black; } 
 h2 {font-size: 40px;}
 h4 {margin: auto;}
 .post-body h4 {font-size: 16px;text-decoration: none;}
