--- a/VirtualLibrary/CategoryPage.css
+++ b/VirtualLibrary/CategoryPage.css
@@ -1,5 +1,6 @@
 * {box-sizing: border-box;}
 body {background-color: #408595;padding: 20px;font-family: Arial;}
+.pagination a {font-size: 20px;color:  black;float: right;padding: 8px 16px;text-decoration: none;transition: background-color .3s;}.pagination a.active {background-color: #2b77e7;color:  #d7f41e;}.pagination a:hover:not(.active) {background-color: #ddd;}
 .main {max-width: 1200px;margin: auto;} 
 h2 {font-size: 40px;}
 h4 {margin: auto;}
