--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -62,7 +62,7 @@
         }
 
         #post-Para {
-            background-color: lightgreen !important;
+            background-color: #63f66387 !important;
             padding: 8px !important;
         }
 
