--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -61,13 +61,13 @@
             font-size: 17px !important;
         }
 
-        #post-Para {
+        #post-sec {
             background-color: #63f66387 !important;
             padding: 8px !important;
             margin: 10px !important;
         }
 
-        #post-Para p {
+        #post-sec p {
             font-size: medium !important; 
         }
 
