--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -73,6 +73,7 @@
             font-size: larger !important;
             font-weight: 700 !important;
             color: #e61111 !important;
+            align-items: center!important;
         }   
         #post-sec p {
             max-width: 70% !important;
