--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -68,19 +68,20 @@
             margin: 10px !important;
         }
 
+        #post-sec > div{
+            max-width: 65% !important;
+          
         #post-sec h1 {
-            max-width: 70% !important;
             font-size: larger !important;
             font-weight: 700 !important;
             color: #e61111 !important;
             align-items: center!important;
         }   
-        #post-sec p {
-            max-width: 60% !important;
+        #post-sec p { 
             font-size: medium !important; 
         }
         #post-sec img {
-            width: 40% !important;
+            width: 35% !important;
             margin: auto !important;
             padding: 8px !important;
             overflow: hidden !important;
