--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -72,12 +72,12 @@
         #intro-post > div.post-sec > div{
             max-width: 65% !important;
           
-      #intro-post > div.post-sec > div > h1   {
-                  font-size: larger !important;
-                  font-weight: 700 !important;
-                  color: #e61111 !important; 
+      .post-sec h1 {
+          font-size: larger !important;
+          font-weight: 700 !important;
+          color: #e61111 !important; 
       }
-        #intro-post > div.post-sec > div > p { 
+        .post-sec p { 
             font-size: medium !important; 
         }
         .post-sec > img {
