--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -72,12 +72,12 @@
         #intro-post > div.post-sec > div{
             max-width: 65% !important;
           
-      .post-sec h1 {
+      .post-sec .head-para h1 {
           font-size: larger !important;
           font-weight: 700 !important;
           color: #e61111 !important; 
       }
-        .post-sec p { 
+        .post-sec .head-para p { 
             font-size: medium !important; 
         }
         .post-sec > img {
