--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -80,7 +80,7 @@
         #intro-post > div.post-sec > div > p { 
             font-size: medium !important; 
         }
-        #intro-post > div.post-sec > img {
+        #intro-post > div.post-sec > img, .post-body img:not(.slider img) {
             width: 35% !important;
             margin: auto !important;
             padding: 8px !important;
