--- a/IT_Skills/IntroParts/CSS/intro-post.css
+++ b/IT_Skills/IntroParts/CSS/intro-post.css
@@ -34,30 +34,30 @@ html {
     font-size: medium !important; 
 }
 
-#post-lst01 {
+.post-lst {
     background-color: lightskyblue !important;
     padding: 10px !important;
     margin: 10px !important;
 }
 
-#post-lst01 h1 {
+.post-lst h1 {
     font-size: larger !important;
     font-weight: 700 !important;
     color: brown !important;
 }
 
-#post-lst01.lst-itms {}
+.post-lst.lst-itms {}
 
-post-lst01>div>ol {
+.post-lst>div>ol {
     font-size: 15px !important;
 }
 
-#post-lst01>div>ol>li {
+.post-lst>div>ol>li {
     list-style-type: decimal;
     font-size: 15px !important;
 }
 
-#post-lst01>div>ol>li b {
+.post-lst>div>ol>li b {
     font-size: 17px !important;
 }
 
