--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -60,12 +60,12 @@ html {
     font-size: 15px !important;
 }
 
-.post-o-lst>div>ol>li {
+.post-o-lst> ol>li {
     list-style-type: decimal;
     font-size: 15px !important;
 }
 
-.post-o-lst>div>ol>li b {
+.post-o-lst>ol>li b {
     font-size: 17px !important;
 }
 
