--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -42,30 +42,28 @@ html {
 .post-para p {
     font-size: medium !important; 
 }
-.post-o-lst {
+#post > div.post-o-lst > ol {
     background-color: lightskyblue !important;
     padding: 10px !important;
     margin: 10px !important;
 }
 
-.post-o-lst h1 {
+#post > div.post-o-lst > ol h1 {
     font-size: larger !important;
     font-weight: 700 !important;
     color: brown !important;
 }
 
-.post-o-lst.lst-itms {}
-
-.post-o-lst>div>ol {
+#post > div.post-o-lst > ol {
     font-size: 15px !important;
 }
 
-.post-o-lst> ol>li {
+#post > div.post-o-lst > ol> li {
     list-style-type: decimal;
     font-size: 15px !important;
 }
 
-.post-o-lst>ol>li b {
+#post > div.post-o-lst > ol >li b {
     font-size: 17px !important;
 }
 
