--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -42,13 +42,13 @@ html {
 .post-para p {
     font-size: medium !important; 
 }
-#post > div.post-o-lst > ol {
+#post > div.post-o-lst {
     background-color: lightskyblue !important;
     padding: 10px !important;
     margin: 10px !important;
 }
 
-#post > div.post-o-lst > ol h1 {
+#post > div.post-o-lst > h1 {
     font-size: larger !important;
     font-weight: 700 !important;
     color: brown !important;
