--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -50,7 +50,7 @@ html {
         margin: 10px !important;
     }
 
-    #post>div.post-o-lst>h1 {
+    .post-o-lst h1 {
         font-size: larger !important;
         font-weight: 700 !important;
         color: brown !important;
