--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -76,11 +76,11 @@ html {
         align-items: center !important;
     }
 
-    #post>div.post-sec:nth-child(1) {
+   div:nth-child(odd of .post-sec) {
         background-color: #63f66387 !important;
     }
 
-    #post>div.post-sec:nth-child(2) {
+    div:nth-child(even of .post-sec) {
         background-color: #e6adef87 !important;
     }
 
@@ -88,12 +88,12 @@ html {
         max-width: 65% !important;
     }
 
-    #post>div.post-sec>div>h1 {
+    div:nth-child(odd of .post-secdiv>h1) {
         font-size: larger !important;
         font-weight: 700 !important; 
     }
 
-    #post>div.post-sec>div>h1:nth-child(1)  { 
+    div:nth-child(even of .post-secdiv>h1) { 
         color: #e61111 !important;
     }
 
