--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -25,7 +25,7 @@ html {
     }
 
     .post-introPara {
-        background-color: lightgray !important;
+        background-color: #e5e6e9 !important;
         padding: 8px !important;
         margin: 10px !important;
     }
