--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -187,7 +187,7 @@ div:nth-child(even of .post-sec)>div>h1 {
 }
 
 #post > div.post-cen-link > a:hover {
-    color: #c0f374 !important;
+    color: #dfefc7 !important;
     text-decoration: underline red !important;
 }
 
