--- a/IT_Skills/IntroParts/CSS/posts.css
+++ b/IT_Skills/IntroParts/CSS/posts.css
@@ -32,20 +32,28 @@ html {
     padding: 8px !important;
     margin: 10px !important;
 }
-
 .post-introPara p {
     font-size: medium !important;
+}
+
+div:nth-child(odd of .post-h1) {
+    background-color: #550000 !important;
+}
+div:nth-child(even of .post-h1) {
+    background-color: #120e28 !important;
+} 
+#post > div.post-h1 > h1 {
+    font-size:x-large!important;
+    color:white!important;
 }
 
 .post-para {
     padding: 8px !important;
     margin: 10px !important;
 }
-
 div:nth-child(odd of .post-para) {
     background-color: #c8c9cb !important;
 }
-
 div:nth-child(even of .post-para) {
     background-color: #f8ffcd87 !important;
 }
@@ -54,11 +62,9 @@ div:nth-child(even of .post-para) {
     padding: 8px !important;
     margin: 10px !important;
 }
-
 div:nth-child(odd of .post-h1-p) {
     background-color: #e5e6e9 !important;
 }
-
 div:nth-child(even of .post-h1-p) {
     background-color: #f8ffcd87 !important;
 }
